# easyloggingpp

./: CMakeLists.txt
src/: CMakeLists.txt  easylogging++.cc
